--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
-version: '3.8'
 services:
   redis:
-    image: "redis:alpine"
+    image: redis:7-alpine
     ports:
-      - "6379:6379"
+      - "6378:6379"
+    restart: always
